# modular

./: BUILD.bazel  README.md
.github/ISSUE_TEMPLATE/: mcloud_issue.yaml
.github/workflows/: build_and_test.yml
bazel/: mojo.MODULE.bazel
bazel/internal/: BUILD.bazel  common.bazelrc  modular_py_test.bzl
bazel/internal/mojodoc-templates/: mojodoc_struct.md
bazel/pip/requirements/: pycross_lock_file.bzl  pyproject.toml
bazel/public-patches/: xgrammar.patch
docs/: generate-models-table.py  index.mdx  pixi.mdx  sidebars.json
docs/code/: README.md
docs/code/develop/broadcasting/: BUILD.bazel
docs/code/develop/indexing/: BUILD.bazel
docs/code/develop/layers/: BUILD.bazel
docs/glossary/ai/: flash-attention.mdx
docs/max/: coding-assistants.mdx  faq.mdx  get-started.mdx  gpu-system-profiling.mdx  models.mdx  nightly-changelog.md  packages.mdx  rest-api.mdx
docs/max/changelog/: v0.24.1.md  v0.24.2.md  v0.24.5.md  v0.24.6.md  v0.25.1.md  v0.25.2.md  v0.25.3.md  v0.25.4.md  v0.25.5.md  v0.25.6.md  v0.25.7.md  v0.26.1.md  v0.26.2.md  v0.26.3.md
docs/max/deploy/: benchmark.mdx  local-to-cloud.mdx
docs/max/develop/: basic-ops.mdx  broadcasting.mdx  build-custom-ops.mdx  custom-kernels-pytorch.mdx  custom-ops-matmul.mdx  custom-ops.mdx  debugging-gpu.mdx  dtypes.mdx  eager-execution.mdx  index.mdx  indexing.mdx  layers.mdx  model-bringup-workflow.mdx  serve-custom-model-architectures.mdx  tensors.mdx
docs/max/inference/: embeddings.mdx
docs/max/serve/: offline-inference.mdx
max/examples/capi/: pixi.toml
max/python/max/pipelines/kv_cache/connectors/dkv/: BUILD.bazel  connector.py
mojo/docs/: BUILD.bazel  faq.md  index.mdx  lib.mdx  nightly-changelog.md  post-process-mojodocs.py  requirements.mdx  roadmap.mdx  sidebars.js  vision.mdx
mojo/docs/changelog/: index.md  v0.2.1.md  v0.24.1.md  v0.24.2.md  v0.24.3.md  v0.24.4.md  v0.24.5.md  v0.24.6.md  v0.25.2.md  v0.25.3.md  v0.25.4.md  v0.25.5.md  v0.25.7.md  v0.26.2.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v1.0.0b1.md
mojo/docs/code/homepage/: homepage_examples.mojo
mojo/docs/code/manual/control-flow/: README.md
mojo/docs/code/manual/decorators/deprecated/: README.md
mojo/docs/code/manual/decorators/doc-hidden/: README.md
mojo/docs/code/manual/decorators/implicit/: README.md
mojo/docs/code/manual/errors/: README.md
mojo/docs/code/manual/generics/: README.md
mojo/docs/code/manual/get-started/: README.md
mojo/docs/code/manual/gpu/fundamentals/: README.md
mojo/docs/code/manual/gpu/intro-tutorial/: README.md
mojo/docs/code/manual/lifecycle/death/: README.md
mojo/docs/code/manual/lifecycle/initialization/: README.md
mojo/docs/code/manual/lifecycle/life/: README.md
mojo/docs/code/manual/metaprogramming/comptime-evaluation/: README.md
mojo/docs/code/manual/metaprogramming/materialization/: README.md
mojo/docs/code/manual/metaprogramming/reflection/: README.md  test.mojo  tests.mojo
mojo/docs/code/manual/operators/: README.md
mojo/docs/code/manual/parameters/index/: README.md  infer_only_parameters.mojo
mojo/docs/code/manual/python-to-mojo/: README.md
mojo/docs/code/manual/python/mojo-from-python/: README.md
mojo/docs/code/manual/python/types/: README.md
mojo/docs/code/manual/structs/index/: README.md
mojo/docs/code/manual/structs/operator-support/: README.md
mojo/docs/code/manual/structs/reference/: README.md
mojo/docs/code/manual/tile-tensor/layouts/: README.md
mojo/docs/code/manual/tile-tensor/tensors/: README.md  tile_tensor_gpu_examples.mojo  tile_tensor_init_from_cpu.mojo  tile_tensor_tile_copier.mojo
mojo/docs/code/manual/traits/: README.md
mojo/docs/code/manual/types/: README.md
mojo/docs/code/manual/values/lifetimes/: README.md
mojo/docs/code/manual/values/value-semantics/: README.md
mojo/docs/code/manual/variables/: README.md
mojo/docs/code/reference/cheat-sheets/: test_conversions.mojo
mojo/docs/code/reference/mojo-function-declarations/: README.md  tests.mojo
mojo/docs/code/reference/mojo-inline-mlir/: README.md
mojo/docs/code/reference/mojo-struct-declarations/: README.md
mojo/docs/code/reference/mojo-trait-declarations/: README.md
mojo/docs/code/tools/notebooks/: README.md
mojo/docs/docs_root/: _redirects.json  install.mdx  sidebars.json
mojo/docs/manual/: basics.mdx  control-flow.mdx  errors.mdx  functions.mdx  generics.mdx  get-started.mdx  index.mdx  install.mdx  packages.md  quickstart.mdx  reflection.mdx  traits.mdx  types.mdx  variables.mdx
mojo/docs/manual/decorators/: deprecated.mdx  doc-hidden.mdx  fieldwise-init.mdx  no-inline.mdx  parameter.mdx
mojo/docs/manual/gpu/: architecture.mdx  block-and-warp.mdx  fundamentals.mdx  intro-tutorial.mdx
mojo/docs/manual/layout/: layouts.mdx  tensors.mdx
mojo/docs/manual/lifecycle/: death.mdx  index.mdx  initialization.mdx  life.mdx
mojo/docs/manual/metaprogramming/: comptime-evaluation.mdx  constraints.mdx  index.mdx  reflection.mdx
mojo/docs/manual/parameters/: index.mdx
mojo/docs/manual/pointers/: index.mdx  unsafe-pointers.mdx
mojo/docs/manual/python/: index.mdx  mojo-from-python.mdx  python-from-mojo.mdx  types.mdx
mojo/docs/manual/structs/: index.mdx  operator-support.mdx  reference.mdx
mojo/docs/manual/tile-tensor/: index.mdx  layouts.mdx  tensors.mdx
mojo/docs/manual/values/: index.mdx  lifetimes.mdx  ownership.mdx  value-semantics.mdx
mojo/docs/reference/: function-declarations.mdx  index.mdx  mojo-function-declarations.mdx  mojo-operators.mdx  types.mdx
mojo/docs/reference/decorators/: compiler-register.mdx  explicit-destroy.mdx  export.mdx  fieldwise-init.mdx  no-inline.mdx  staticmethod.mdx
mojo/docs/releases/: 2023-05.md  2023-06.md  2023-07.md  index.md  v0.24.4.md  v0.24.5.md  v0.24.6.md  v0.25.1.md  v0.25.2.md  v0.25.3.md  v0.25.4.md  v0.25.5.md  v0.25.6.md  v0.25.7.md  v0.26.1.md  v0.26.2.md  v0.4.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v1.0.0b1.md
mojo/docs/tools/: compilation.mdx  debugging.mdx  notebooks.mdx  testing.mdx
mojo/stdlib/test/memory/unsafe_pointer/: BUILD.bazel  test_unsafe_from_address_overflow.mojo  test_unsafe_pointer.mojo
(+700 files in other folders)
