load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:api.bzl", "install_docs", "modular_py_binary", "pkg_filegroup", "pkg_files", "strip_prefix")

# gazelle:default_visibility //oss/modular/docs:__subpackages__

package(default_visibility = ["//oss/modular/docs:__subpackages__"])

install_docs(
    name = "install",
    dest_subdir = "mojosite/docs",
    tags = ["manual"],
    target = ":mojodocs",
)

install_docs(
    name = "install-changelog",
    dest_subdir = "mojosite/changelog",
    tags = ["manual"],
    target = ":changelog",
)

genrule(
    name = "mojodocs",
    srcs = [
        ":mojosite",
    ],
    outs = ["mojodocs.tar"],
    cmd = """
  # Unpack inputs for processing
  mkdir -p mojosite
  tar -xf $(location :mojosite) -C mojosite

  # Strip the mojo/ prefix (mojosite content lives at root, not under mojo/)
  mv mojosite/mojo/* mojosite/
  rm -rf mojosite/mojo

  # Post-process before restructuring (script expects original paths)
  chmod -R +w mojosite
  $(location :post-process-mojodocs) mojosite

  # TODO: Refactor all this after new site launch
  # Restructure for new site layout:
  #   docs_root/ content → root (stripping docs_root/ prefix)
  #   everything else   → docs/
  mv mojosite/docs_root docs_root_tmp
  mkdir docs_tmp
  mv mojosite/* docs_tmp/
  mkdir -p mojosite/docs
  mv docs_tmp/* mojosite/docs/
  rm -rf docs_tmp
  cp -r docs_root_tmp/* mojosite/
  rm -rf docs_root_tmp
  rm -f mojosite/docs/nightly-changelog.md
  rm -rf mojosite/docs/changelog

  # Generate final output
  cd mojosite
  tar -cf ../$@ *
  """,
    tags = ["manual"],
    tools = [":post-process-mojodocs"],
)

genrule(
    name = "changelog",
    srcs = [":mojodocs"],
    outs = ["changelog.tar"],
    cmd = """
  mkdir -p changelog_tmp
  tar -xf $(location :mojodocs) -C changelog_tmp
  cd changelog_tmp/docs/changelog
  tar -cf ../../../$@ *
  """,
    tags = ["manual"],
)

pkg_tar(
    name = "mojosite",
    srcs = [
        ":docs_root-docs",
        ":mojo",
        ":mojo-layout-public-docs",
        ":mojo-std-public-docs",
    ],
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

pkg_files(
    name = "docs",
    srcs = glob(
        [
            "**",
        ],
        exclude = [
            "README.md",
            "BUILD.bazel",
            "code/**",
            "docs_root/**",
            "post-process-mojodocs.py",
        ],
    ),
    prefix = "mojo",
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_files(
    name = "docs_root-docs",
    srcs = glob(
        ["docs_root/**"],
        allow_empty = True,
    ),
    prefix = "mojo",
    strip_prefix = strip_prefix.from_pkg(""),
    tags = ["manual"],
)

mojo_commands = [
    "Build",
    "Debug",
    "Demangle",
    "Doc",
    "Format",
    "Index",
    "Precompile",
    "REPL",
    "Run",
]

pkg_files(
    name = "mojo-cli",
    srcs = ["//KGEN/tools/mojo:" + command + ".md_files" for command in mojo_commands],
    prefix = "mojo/cli",
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo",
    srcs = [
        ":docs",
        ":mojo-cli",
    ],
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo-std-public-docs",
    srcs = [
        "//oss/modular/mojo/stdlib/std:docs",
    ],
    prefix = "mojo",
    tags = ["manual"],
)

pkg_files(
    name = "layout-docs-files",
    srcs = ["//max/kernels/src/layout:layout.docs"],
    renames = {
        "//max/kernels/src/layout:layout.docs": "layout",
    },
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo-layout-public-docs",
    srcs = [":layout-docs-files"],
    prefix = "mojo",
    tags = ["manual"],
)

modular_py_binary(
    name = "post-process-mojodocs",
    srcs = [
        ":post-process-mojodocs.py",
    ],
    tags = ["manual"],
)
