load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:api.bzl", "install_docs", "modular_py_binary", "pkg_filegroup", "pkg_files", "strip_prefix")

# gazelle:default_visibility //oss/modular/docs:__subpackages__

package(default_visibility = ["//oss/modular/docs:__subpackages__"])

# The genrule directory `mojosite_docs` is a Bazel action staging tree only (not a path in modular-fe).
# mojodocs.tar is unpacked under modular-fe/mojosite/docs/.
# releases.tar is unpacked under modular-fe/mojosite/releases/ (blog plugin).

install_docs(
    name = "install",
    dest_subdir = "mojosite/docs",
    tags = ["manual"],
    target = ":mojodocs",
)

install_docs(
    name = "install-releases",
    dest_subdir = "mojosite/releases",
    tags = ["manual"],
    target = ":releases",
)

genrule(
    name = "mojodocs",
    srcs = [
        ":mojosite",
    ],
    outs = ["mojodocs.tar"],
    cmd = """
  # Unpack inputs for processing
  mkdir -p mojosite_docs
  tar -xf $(location :mojosite) -C mojosite_docs

  # Post-process before restructuring (script expects original paths)
  chmod -R +w mojosite_docs
  $(location :post-process-mojodocs) mojosite_docs

  # TODO: Refactor all this after new site launch
  # Restructure for new site layout:
  #   docs_root/ content → root (stripping docs_root/ prefix)
  #   everything else   → docs/
  mv mojosite_docs/docs_root docs_root_tmp
  mkdir docs_tmp
  mv mojosite_docs/* docs_tmp/
  mkdir -p mojosite_docs/docs
  mv docs_tmp/* mojosite_docs/docs/
  rm -rf docs_tmp
  cp -r docs_root_tmp/* mojosite_docs/
  rm -rf docs_root_tmp
  rm -f mojosite_docs/docs/nightly-changelog.md

  # Generate final output
  cd mojosite_docs
  tar -cf ../$@ *
  """,
    tags = ["manual"],
    tools = [":post-process-mojodocs"],
)

pkg_files(
    name = "releases_pack",
    srcs = glob(["releases/**"]),
    strip_prefix = strip_prefix.from_pkg("releases"),
    tags = ["manual"],
)

pkg_tar(
    name = "releases",
    srcs = [":releases_pack"],
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

pkg_tar(
    name = "mojosite",
    srcs = [
        ":docs_root-docs",
        ":mojo",
        ":mojo-layout-public-docs",
        ":mojo-std-public-docs",
    ],
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

pkg_files(
    name = "docs",
    srcs = glob(
        [
            "**",
        ],
        exclude = [
            "README.md",
            "BUILD.bazel",
            "code/**",
            "docs_root/**",
            "post-process-mojodocs.py",
            "releases/**",
        ],
    ),
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_files(
    name = "docs_root-docs",
    srcs = glob(
        ["docs_root/**"],
        allow_empty = True,
    ),
    strip_prefix = strip_prefix.from_pkg(""),
    tags = ["manual"],
)

mojo_commands = [
    "Build",
    "Debug",
    "Demangle",
    "Doc",
    "Format",
    "Index",
    "Precompile",
    "REPL",
    "Run",
]

pkg_files(
    name = "mojo-cli",
    srcs = ["//KGEN/tools/mojo:" + command + ".md_files" for command in mojo_commands],
    prefix = "cli",
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo",
    srcs = [
        ":docs",
        ":mojo-cli",
    ],
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo-std-public-docs",
    srcs = [
        "//oss/modular/mojo/stdlib/std:docs",
    ],
    tags = ["manual"],
)

pkg_files(
    name = "layout-docs-files",
    srcs = ["//max/kernels/src/layout:layout.docs"],
    renames = {
        "//max/kernels/src/layout:layout.docs": "layout",
    },
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo-layout-public-docs",
    srcs = [":layout-docs-files"],
    tags = ["manual"],
)

modular_py_binary(
    name = "post-process-mojodocs",
    srcs = [
        ":post-process-mojodocs.py",
    ],
    tags = ["manual"],
)
