load("//bazel:api.bzl", "modular_py_library")

package(default_visibility = ["//max:consumers"])

modular_py_library(
    name = "dkv",
    srcs = [
        "__init__.py",
        "connector.py",
    ],
    ignore_unresolved_imports = [
        # Provided transitively by the parent //max/python/max/pipelines/kv_cache
        # target. Declaring them here would create a circular dependency
        # since kv_cache depends on this package.
        "max.nn",
        "max._core",
        "max.driver",
        "max.profiler",
        "msgspec",
        # The high-level connector client (pyo3 module), provided at runtime
        # only (private dkv-connector wheel); OSS MAX lazily imports it.
        "dkv_connector",
    ],
    tags = [
        "no-mypy",
        "no-pydeps",
    ],
    deps = [
        # The connector interface only (KVConnector / KVConnectorTransfer /
        # CompletedTransfer). This is the lightweight interface target, not the
        # full kv_cache library, so there is no cycle (kv_cache depends on this
        # package, but this package depends only on the interface).
        "//max/python/max/pipelines/kv_cache:kv_connector",
    ],
)
